# Game-Engine-2

./: config.txt  imgui.ini
src/: CMakeLists.txt  Config.cpp  gui.cpp  gui.h  main.cpp
src/Ecs/Components/: ComponentStorage.hpp
src/Ecs/Entity/: EntityId.cpp
src/Ecs/Filter/: Filter.cpp  Filter.h
src/Ecs/Systems/: SystemsManager.cpp
src/Ecs/World/: World.cpp  World.h
src/GUI/: GUI.cpp
src/Sample/Components/: GameOverEvent.h  MoveInputEvent.h  ShooterComponent.h
src/Sample/Systems/: AsteroidSpawnSystem.cpp  AsteroidSpawnSystem.h  CollisionHandlerSystem.cpp  CollisionHandlerSystem.h  GameOverSystem.cpp  GameOverSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  OutOfScreenCleanupSystem.cpp  OutOfScreenCleanupSystem.h  RenderSystem.cpp  RenderSystem.h  RestartSystem.cpp  RestartSystem.h  ShootSystem.cpp  ShootSystem.h
